--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "ajv": "^6.5.4",
+    "barba.js": "^1.0.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1"
   },
